--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
+bcrypt==5.0.0
 certifi==2026.1.4
 click==8.3.1
 colorama==0.4.6
@@ -27,6 +28,7 @@ pydantic-extra-types==2.11.0
 pydantic-settings==2.13.1
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.11.0
 python-dotenv==1.2.1
 python-multipart==0.0.22
 PyYAML==6.0.3
